--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4482,7 +4482,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 10000;
+      z-index: 9999999;
       display: flex;
       flex-direction: column-reverse;
       gap: 12px;
