feat: adiciona Almoxarifado ao menu Mais no mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7245,6 +7245,10 @@
       background: rgba(249, 115, 22, 0.15);
       color: #f97316;
     }
+    .mobile-more-icon.almoxarifado {
+      background: rgba(59, 130, 246, 0.15);
+      color: #3b82f6;
+    }
     .mobile-more-icon.config {
       background: rgba(148, 163, 184, 0.15);
       color: #94a3b8;
@@ -10835,6 +10839,12 @@
             <svg viewBox="0 0 24 24" fill="currentColor"><path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/></svg>
           </div>
           <span>Compras</span>
+        </div>
+        <div class="mobile-more-item" onclick="navigateMobileMore('almoxarifado')">
+          <div class="mobile-more-icon almoxarifado">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9h-4v4h-2v-4H9V9h4V5h2v4h4v2z"/></svg>
+          </div>
+          <span>Almoxarifado</span>
         </div>
         <div class="mobile-more-item" onclick="navigateMobileMore('configuracoes')">
           <div class="mobile-more-icon config">
