--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7710,6 +7710,9 @@
                   <button class="dashboard-filter-neo active" id="filter-daily-new" onclick="setDashboardFilter('daily')">Hoje</button>
                   <button class="dashboard-filter-neo" id="filter-weekly-new" onclick="setDashboardFilter('weekly')">Semana</button>
                   <button class="dashboard-filter-neo" id="filter-monthly-new" onclick="setDashboardFilter('monthly')">Mês</button>
+                  <select id="filter-month" onchange="setDashboardMonth(this.value)" style="padding: 10px 16px; border: none; background: var(--bg-secondary); color: var(--text-primary); font-size: 13px; font-weight: 600; border-radius: 10px; cursor: pointer; margin-left: 8px;">
+                    <option value="">Mês Específico...</option>
+                  </select>
                   <button class="btn-export-neo" onclick="exportDashboardReport()">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
