--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2029,74 +2029,87 @@
       box-shadow: 0 6px 24px rgba(245, 158, 11, 0.45);
     }
     .almox-stats-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 16px;
-      margin-bottom: 24px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      margin-bottom: 20px;
     }
     .almox-stat-card {
       background: var(--bg-card);
       border: 1px solid var(--border-color);
-      border-radius: 14px;
-      padding: 18px;
+      border-radius: 10px;
+      padding: 12px 16px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      text-align: center;
-      gap: 10px;
+      gap: 12px;
       transition: all 0.3s;
+      flex: 1 1 auto;
+      min-width: 150px;
+      max-width: 200px;
     }
     .almox-stat-card:hover {
-      transform: translateY(-3px);
+      transform: translateY(-2px);
       border-color: rgba(245, 158, 11, 0.3);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.12);
     }
     .almox-stat-icon {
-      width: 48px;
-      height: 48px;
-      border-radius: 12px;
+      width: 36px;
+      height: 36px;
+      border-radius: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-shrink: 0;
+    }
+    .almox-stat-icon svg {
+      width: 18px;
+      height: 18px;
     }
     .almox-stat-icon.total { background: rgba(59, 130, 246, 0.15); color: #3b82f6; }
     .almox-stat-icon.baixo { background: rgba(239, 68, 68, 0.15); color: #ef4444; }
     .almox-stat-icon.categorias { background: rgba(168, 85, 247, 0.15); color: #a855f7; }
     .almox-stat-icon.marcas { background: rgba(245, 158, 11, 0.15); color: #f59e0b; }
+    .almox-stat-info {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
     .almox-stat-value {
-      font-size: 28px;
+      font-size: 20px;
       font-weight: 700;
       color: var(--text-primary);
+      line-height: 1;
     }
     .almox-stat-label {
-      font-size: 12px;
+      font-size: 10px;
       color: var(--text-secondary);
       text-transform: uppercase;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.3px;
     }
     .almox-filters-bar {
       display: flex;
       align-items: center;
-      gap: 16px;
+      gap: 12px;
       flex-wrap: wrap;
-      padding: 16px 20px;
+      padding: 12px 16px;
       background: var(--bg-card);
       border: 1px solid var(--border-color);
-      border-radius: 14px;
-      margin-bottom: 20px;
+      border-radius: 12px;
+      margin-bottom: 16px;
     }
     .almox-search {
       flex: 1;
-      min-width: 200px;
+      min-width: 180px;
       display: flex;
       align-items: center;
-      gap: 10px;
-      padding: 10px 16px;
+      gap: 8px;
+      padding: 8px 12px;
       background: var(--bg-secondary);
       border: 1px solid var(--border-color);
-      border-radius: 10px;
+      border-radius: 8px;
     }
-    .almox-search svg { color: var(--text-muted); }
+    .almox-search svg { color: var(--text-muted); width: 16px; height: 16px; }
     .almox-search input {
       flex: 1;
       background: transparent;
@@ -8064,51 +8077,59 @@
             </div>
           </div>
 
-          <!-- Stats Grid -->
+          <!-- Stats Grid - Layout compacto e alinhado -->
           <div class="almox-stats-grid">
             <div class="almox-stat-card">
               <div class="almox-stat-icon total">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
                   <polyline points="3.27 6.96 12 12.01 20.73 6.96"/>
                   <line x1="12" y1="22.08" x2="12" y2="12"/>
                 </svg>
               </div>
-              <div class="almox-stat-value" id="almox-total-items">0</div>
-              <div class="almox-stat-label">Total de Itens</div>
+              <div class="almox-stat-info">
+                <div class="almox-stat-value" id="almox-total-items">0</div>
+                <div class="almox-stat-label">Total de Itens</div>
+              </div>
             </div>
             <div class="almox-stat-card">
               <div class="almox-stat-icon baixo">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/>
                   <line x1="12" y1="9" x2="12" y2="13"/>
                   <line x1="12" y1="17" x2="12.01" y2="17"/>
                 </svg>
               </div>
-              <div class="almox-stat-value" id="almox-estoque-baixo">0</div>
-              <div class="almox-stat-label">Estoque Baixo</div>
+              <div class="almox-stat-info">
+                <div class="almox-stat-value" id="almox-estoque-baixo">0</div>
+                <div class="almox-stat-label">Estoque Baixo</div>
+              </div>
             </div>
             <div class="almox-stat-card">
               <div class="almox-stat-icon categorias">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <rect x="3" y="3" width="7" height="7"/>
                   <rect x="14" y="3" width="7" height="7"/>
                   <rect x="14" y="14" width="7" height="7"/>
                   <rect x="3" y="14" width="7" height="7"/>
                 </svg>
               </div>
-              <div class="almox-stat-value" id="almox-categorias">0</div>
-              <div class="almox-stat-label">Categorias</div>
+              <div class="almox-stat-info">
+                <div class="almox-stat-value" id="almox-categorias">0</div>
+                <div class="almox-stat-label">Categorias</div>
+              </div>
             </div>
             <div class="almox-stat-card">
               <div class="almox-stat-icon marcas">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"/>
                   <line x1="7" y1="7" x2="7.01" y2="7"/>
                 </svg>
               </div>
-              <div class="almox-stat-value" id="almox-marcas">0</div>
-              <div class="almox-stat-label">Marcas</div>
+              <div class="almox-stat-info">
+                <div class="almox-stat-value" id="almox-marcas">0</div>
+                <div class="almox-stat-label">Marcas</div>
+              </div>
             </div>
           </div>
 
