Fix: dropdown frequencia com Dia S/N

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11847,10 +11847,11 @@
           </div>
           <div class="form-group">
             <label style="color: rgba(255,255,255,0.7); font-size: 13px; margin-bottom: 6px; display: block;">Tipo de Frequência</label>
-            <select id="checklist-frequency" name="frequency" style="width: 100%; padding: 12px 14px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 8px; color: #fff; font-size: 14px;">
-              <option value="diario">Diário</option>
-              <option value="semanal">Semanal</option>
-              <option value="mensal">Mensal</option>
+            <select id="checklist-frequency" name="frequency" style="width: 100%; padding: 12px 14px; background: #1a1a2e; border: 1px solid rgba(255,255,255,0.2); border-radius: 8px; color: #fff; font-size: 14px; appearance: auto;">
+              <option value="diario" style="background: #1a1a2e; color: #fff;">Diário</option>
+              <option value="dia_sn" style="background: #1a1a2e; color: #fff;">Dia Sim/Não</option>
+              <option value="semanal" style="background: #1a1a2e; color: #fff;">Semanal</option>
+              <option value="mensal" style="background: #1a1a2e; color: #fff;">Mensal</option>
             </select>
           </div>
         </div>
