--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11026,17 +11026,93 @@
           </div>
           <div style="position: relative;">
             <label style="display: block; font-size: 11px; font-weight: 600; color: #d4af37; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Local / Setor *</label>
-            <input type="text" id="os-sector" required placeholder="Ex: Galpão 3" style="
-              width: 100%;
-              padding: 14px 16px;
-              background: rgba(255,255,255,0.03);
-              border: 1px solid rgba(255,255,255,0.1);
-              border-radius: 12px;
-              color: #fff;
-              font-size: 14px;
-              transition: all 0.3s ease;
-              outline: none;
-            " onfocus="this.style.borderColor='rgba(212,175,55,0.5)';this.style.boxShadow='0 0 20px rgba(212,175,55,0.2)'" onblur="this.style.borderColor='rgba(255,255,255,0.1)';this.style.boxShadow='none'">
+            <div id="os-sector-dropdown" style="position: relative;">
+              <button type="button" id="os-sector-btn" onclick="toggleSectorDropdown()" style="
+                width: 100%;
+                padding: 14px 16px;
+                background: rgba(255,255,255,0.03);
+                border: 1px solid rgba(255,255,255,0.1);
+                border-radius: 12px;
+                color: #888;
+                font-size: 14px;
+                text-align: left;
+                cursor: pointer;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                transition: all 0.3s ease;
+              ">
+                <span id="os-sector-text">Selecione o local...</span>
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg>
+              </button>
+              <input type="hidden" id="os-sector" name="sector" required>
+              <div id="os-sector-options" style="
+                display: none;
+                position: absolute;
+                top: calc(100% + 6px);
+                left: 0;
+                right: 0;
+                background: rgba(20, 20, 30, 0.98);
+                border: 1px solid rgba(212, 175, 55, 0.3);
+                border-radius: 12px;
+                max-height: 280px;
+                overflow-y: auto;
+                z-index: 1000;
+                box-shadow: 0 15px 40px rgba(0,0,0,0.5);
+                backdrop-filter: blur(20px);
+              ">
+                <!-- Locais simples -->
+                <div onclick="selectSector('Sala de Ovos')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  🥚 Sala de Ovos
+                </div>
+                <!-- Vertical com sub-opções -->
+                <div class="sector-group">
+                  <div onclick="toggleSectorSub('vertical')" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between; align-items: center; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.1)'" onmouseout="this.style.background='transparent'">
+                    <span>🏗️ Vertical</span>
+                    <svg id="icon-vertical" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" style="transition: 0.2s;"><polyline points="6 9 12 15 18 9"/></svg>
+                  </div>
+                  <div id="sub-vertical" style="display: none; background: rgba(0,0,0,0.2);">
+                    <div onclick="selectSector('Vertical 1')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Vertical 1</div>
+                    <div onclick="selectSector('Vertical 2')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Vertical 2</div>
+                    <div onclick="selectSector('Vertical 3')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Vertical 3</div>
+                  </div>
+                </div>
+                <!-- Galpão com sub-opções -->
+                <div class="sector-group">
+                  <div onclick="toggleSectorSub('galpao')" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between; align-items: center; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.1)'" onmouseout="this.style.background='transparent'">
+                    <span>🏭 Galpão</span>
+                    <svg id="icon-galpao" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#888" stroke-width="2" style="transition: 0.2s;"><polyline points="6 9 12 15 18 9"/></svg>
+                  </div>
+                  <div id="sub-galpao" style="display: none; background: rgba(0,0,0,0.2);">
+                    <div onclick="selectSector('Galpão 1')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Galpão 1</div>
+                    <div onclick="selectSector('Galpão 2')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Galpão 2</div>
+                    <div onclick="selectSector('Galpão 3')" class="sector-option" style="padding: 10px 16px 10px 36px; cursor: pointer; color: #ccc; font-size: 13px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)';this.style.color='#fff'" onmouseout="this.style.background='transparent';this.style.color='#ccc'">Galpão 3</div>
+                  </div>
+                </div>
+                <!-- Outros locais -->
+                <div onclick="selectSector('Expedição')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  📦 Expedição
+                </div>
+                <div onclick="selectSector('Cantina')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  🍽️ Cantina
+                </div>
+                <div onclick="selectSector('Escritório')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  🏢 Escritório
+                </div>
+                <div onclick="selectSector('Oficina')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  🔧 Oficina
+                </div>
+                <div onclick="selectSector('Almoxarifado')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  📋 Almoxarifado
+                </div>
+                <div onclick="selectSector('Fábrica de Ração')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; border-bottom: 1px solid rgba(255,255,255,0.05); transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  🌾 Fábrica de Ração
+                </div>
+                <div onclick="selectSector('Vertical Esteira Central')" class="sector-option" style="padding: 12px 16px; cursor: pointer; color: #fff; font-size: 14px; transition: 0.2s;" onmouseover="this.style.background='rgba(212,175,55,0.15)'" onmouseout="this.style.background='transparent'">
+                  ⚙️ Vertical Esteira Central
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
