Add sistema de diarias com PDF para Guilherme Braga

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10832,7 +10832,7 @@
                     </div>
                     
                     <p style="font-size: 11px; color: var(--text-secondary); text-transform: uppercase; letter-spacing: 2px; margin-bottom: 8px;">Desenvolvido por</p>
-                    <h3 style="font-size: 24px; color: var(--accent-gold); font-weight: 600; margin-bottom: 6px; letter-spacing: 1px;">
+                    <h3 onclick="openDiariasModal()" style="font-size: 24px; color: var(--accent-gold); font-weight: 600; margin-bottom: 6px; letter-spacing: 1px; cursor: pointer; transition: 0.3s;" onmouseover="this.style.textShadow='0 0 20px rgba(212,175,55,0.5)'" onmouseout="this.style.textShadow='none'">
                       Guilherme Braga
                     </h3>
                     <p style="font-size: 12px; color: var(--text-secondary); margin-bottom: 16px;">Full Stack Developer</p>
