--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8660,34 +8660,15 @@
                   <select id="filter-month" onchange="setDashboardMonth(this.value)" style="padding: 10px 16px; border: none; background: var(--bg-secondary); color: var(--text-primary); font-size: 13px; font-weight: 600; border-radius: 10px; cursor: pointer; margin-left: 8px;">
                     <option value="">Mês Específico...</option>
                   </select>
-                  <div class="export-dropdown-container" style="position: relative;">
-                    <button class="btn-export-neo" onclick="toggleExportDropdown(event)">
-                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                        <polyline points="7 10 12 15 17 10"/>
-                        <line x1="12" y1="15" x2="12" y2="3"/>
-                      </svg>
-                      Exportar
-                      <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-left: 4px;"><polyline points="6 9 12 15 18 9"/></svg>
-                    </button>
-                    <div id="export-dropdown" style="display: none; position: absolute; top: 100%; right: 0; margin-top: 8px; background: var(--bg-secondary); border: 1px solid rgba(255,255,255,0.1); border-radius: 12px; overflow: hidden; z-index: 1000; min-width: 200px; box-shadow: 0 10px 40px rgba(0,0,0,0.4);">
-                      <button onclick="exportDashboardReport(); closeExportDropdown();" style="width: 100%; padding: 14px 18px; background: transparent; border: none; color: var(--text-primary); font-size: 14px; text-align: left; cursor: pointer; display: flex; align-items: center; gap: 12px; transition: 0.2s;" onmouseover="this.style.background='rgba(139,92,246,0.15)'" onmouseout="this.style.background='transparent'">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#ef4444" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/></svg>
-                        <div>
-                          <div style="font-weight: 600;">Exportar PDF</div>
-                          <div style="font-size: 11px; color: rgba(255,255,255,0.4);">Para impressão</div>
-                        </div>
-                      </button>
-                      <div style="height: 1px; background: rgba(255,255,255,0.1);"></div>
-                      <button onclick="exportDashboardHTML(); closeExportDropdown();" style="width: 100%; padding: 14px 18px; background: transparent; border: none; color: var(--text-primary); font-size: 14px; text-align: left; cursor: pointer; display: flex; align-items: center; gap: 12px; transition: 0.2s;" onmouseover="this.style.background='rgba(139,92,246,0.15)'" onmouseout="this.style.background='transparent'">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><path d="M10 12l-2 2 2 2"/><path d="M14 12l2 2-2 2"/></svg>
-                        <div>
-                          <div style="font-weight: 600;">Exportar HTML</div>
-                          <div style="font-size: 11px; color: rgba(255,255,255,0.4);">Interativo offline</div>
-                        </div>
-                      </button>
-                    </div>
-                  </div>
+                  <button class="btn-export-neo" onclick="exportDashboardReport()">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                      <polyline points="14 2 14 8 20 8"/>
+                      <line x1="16" y1="13" x2="8" y2="13"/>
+                      <line x1="16" y1="17" x2="8" y2="17"/>
+                    </svg>
+                    Gerar Relatório
+                  </button>
                 </div>
               </div>
               
