--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2592,6 +2592,118 @@
       border-top: 1px solid rgba(255,255,255,0.04);
     }
 
+    /* ========== ALMOXARIFADO V2 - AUTOCOMPLETE SEARCH ========== */
+    .almox2-search {
+      position: relative;
+    }
+    .almox2-autocomplete {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: linear-gradient(180deg, rgba(30, 20, 60, 0.98), rgba(20, 15, 45, 0.98));
+      backdrop-filter: blur(20px);
+      border: 1px solid rgba(139, 92, 246, 0.3);
+      border-top: none;
+      border-radius: 0 0 12px 12px;
+      max-height: 320px;
+      overflow-y: auto;
+      z-index: 100;
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4), 0 0 30px rgba(139, 92, 246, 0.1);
+    }
+    .almox2-autocomplete.active {
+      display: block;
+      animation: almoxAutocompleteIn 0.2s ease;
+    }
+    @keyframes almoxAutocompleteIn {
+      from { opacity: 0; transform: translateY(-8px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .almox2-autocomplete-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px 16px;
+      cursor: pointer;
+      transition: all 0.15s ease;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    }
+    .almox2-autocomplete-item:last-child {
+      border-bottom: none;
+      border-radius: 0 0 12px 12px;
+    }
+    .almox2-autocomplete-item:hover,
+    .almox2-autocomplete-item.selected {
+      background: rgba(139, 92, 246, 0.15);
+    }
+    .almox2-autocomplete-icon {
+      width: 36px;
+      height: 36px;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      background: rgba(139, 92, 246, 0.15);
+      color: #a78bfa;
+    }
+    .almox2-autocomplete-icon.baixo {
+      background: rgba(245, 158, 11, 0.15);
+      color: #fbbf24;
+    }
+    .almox2-autocomplete-icon.critico {
+      background: rgba(239, 68, 68, 0.15);
+      color: #f87171;
+    }
+    .almox2-autocomplete-info {
+      flex: 1;
+      min-width: 0;
+    }
+    .almox2-autocomplete-name {
+      font-size: 14px;
+      font-weight: 500;
+      color: #fff;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .almox2-autocomplete-name mark {
+      background: rgba(168, 85, 247, 0.4);
+      color: #fff;
+      padding: 0 2px;
+      border-radius: 3px;
+    }
+    .almox2-autocomplete-meta {
+      font-size: 11px;
+      color: rgba(255, 255, 255, 0.5);
+      display: flex;
+      gap: 10px;
+      margin-top: 2px;
+    }
+    .almox2-autocomplete-qty {
+      font-size: 13px;
+      font-weight: 600;
+      color: #a78bfa;
+      white-space: nowrap;
+    }
+    .almox2-autocomplete-qty.baixo {
+      color: #fbbf24;
+    }
+    .almox2-autocomplete-qty.critico {
+      color: #f87171;
+    }
+    .almox2-autocomplete-empty {
+      padding: 24px;
+      text-align: center;
+      color: rgba(255, 255, 255, 0.4);
+      font-size: 13px;
+    }
+    .almox2-autocomplete-empty svg {
+      margin-bottom: 8px;
+      opacity: 0.5;
+    }
+
     /* ========== ALMOXARIFADO V2 - PREMIUM PURPLE GLASS BLUR ========== */
     .almox2-header {
       display: flex;
@@ -10050,7 +10162,8 @@
                   <circle cx="11" cy="11" r="8"/>
                   <line x1="21" y1="21" x2="16.65" y2="16.65"/>
                 </svg>
-                <input type="text" id="almox-search-input" placeholder="Buscar item, SKU, marca..." oninput="filterAlmoxarifado()">
+                <input type="text" id="almox-search-input" placeholder="Buscar item, SKU, marca..." oninput="handleAlmoxSearch(this)" autocomplete="off">
+                <div id="almox-autocomplete" class="almox2-autocomplete"></div>
               </div>
               <div class="almox2-filter-selects">
                 <select id="almox-filter-categoria" onchange="filterAlmoxarifado()">
